# confish-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: actions.rs  client.rs  config.rs  error.rs  feeds.rs  http.rs  lib.rs  logs.rs  tracing_layer.rs  types.rs  webhook.rs
tests/: actions.rs  client.rs  feeds.rs  tracing.rs  webhook.rs
