[package]
name = "confish"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
description = "Official Rust SDK for confish — typed configuration, actions, and webhooks."
license = "MIT"
repository = "https://github.com/confishhq/confish-rust"
homepage = "https://confi.sh"
documentation = "https://docs.rs/confish"
readme = "README.md"
keywords = ["confish", "configuration", "sdk", "config", "feature-flags"]
categories = ["api-bindings", "config"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
tokio-util = { version = "0.7" }
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
percent-encoding = "2"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
